tests/typing/pass/two_behaviours_on_two_contracts.act
contract C

constructor(uint24 _x)

creates

  uint24 x := _x

transition increase(uint24 new_x) : uint24

  updates
    x := x

  returns pre(x)

ensures

  post(x) >= pre(x)

// Second contract, with same behaviour name
contract D

constructor(uint24 _x)

creates

  uint24 x := _x

transition increase2(uint24 new_x) : uint24

updates
    x := x

  returns new_x

ensures

  post(x) >= pre(x)

